# iafa-bezier

./: .gitignore  .gitmodules  Cargo.toml  README.md
assets/shaders/: mesh.frag.glsl  mesh.vert.glsl  noop.vert.glsl  triangle.frag.glsl
assets/shaders/screen/: tonemapping.glsl
benches/: bezier.rs
src/: camera.rs  gbuffers.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  screen_draw.rs  transform.rs
src/bezier/: curve.rs  surface.rs
